[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crypto_hofmetyl"
version = "0.0.7"
authors = [
  { name="Tyler Hofmeister", email="tyler.hofmeister@gmail.com" },
]
description = "A simple package to handle encrypting and decrypting files with a password"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "hashlib",
  "os",
  "Crypto"
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"